<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dim_5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/layout_height"
            android:layout_weight="1"
            android:scaleType="fitXY" />

        <LinearLayout
            android:layout_width="@dimen/dim_0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dim_5dp"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_10dp">

                <ImageView
                    android:id="@+id/favorite_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/dim_10dp"
                    android:layout_marginTop="@dimen/dim_2dp"
                    android:src="@drawable/star_active" />

                <TextView
                    android:id="@+id/user_rating_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dim_5dp"
                    android:gravity="center_vertical"
                    android:text="@string/user_rating"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/user_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_rating_title"
                    android:layout_marginStart="@dimen/dim_15dp"
                    android:layout_marginTop="@dimen/dim_3dp" />

            </RelativeLayout>

            <TextView
                android:id="@+id/release_date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim_5dp"
                android:layout_marginTop="@dimen/dim_10dp"
                android:gravity="center_vertical"
                android:text="@string/release_date"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim_15dp"
                android:layout_marginTop="3dp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/description"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_5dp"
        android:layout_marginTop="@dimen/dim_3dp"
        android:text="" />

    <TextView
        android:id="@+id/trailers_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_5dp"
        android:gravity="center_vertical"
        android:text="@string/trailers"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/trailers_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/no_trailers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dim_5dp"
            android:gravity="center_vertical"
            android:text="@string/no_trailers"
            android:visibility="gone" />

    </LinearLayout>

    <TextView
        android:id="@+id/reviews_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_5dp"
        android:gravity="center_vertical"
        android:text="@string/reviews"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/reviews_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/no_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dim_5dp"
            android:gravity="center_vertical"
            android:text="@string/no_reviews"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>

